--- a/src/CustomSecondLevelCacheCluster/packages/repositories.config
+++ b/src/CustomSecondLevelCacheCluster/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\CustomSecondLevelCacheClusterTransport\packages.config" />
+  <repository path="..\TcpCacheClusterServer\packages.config" />
   <repository path="..\TestCluster\packages.config" />
   <repository path="..\TestClusterModel\packages.config" />
 </repositories>
