--- a/src/CustomSecondLevelCacheCluster/TestClusterModel/TestClusterModel.csproj
+++ b/src/CustomSecondLevelCacheCluster/TestClusterModel/TestClusterModel.csproj
@@ -66,6 +66,9 @@
     <None Include="OpenAccessNuGet.targets" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Readme.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="OpenAccessNuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
