Adding support for RabbitMQ

--- a/src/CustomSecondLevelCacheCluster/TestCluster/App.config
+++ b/src/CustomSecondLevelCacheCluster/TestCluster/App.config
@@ -1,6 +1,6 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
     <add name="DB1" connectionString="data source=.\sqlexpress;initial catalog=FluentMappingDatabase;integrated security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
