--- a/src/CustomSecondLevelCacheCluster/TestClusterModel/packages.config
+++ b/src/CustomSecondLevelCacheCluster/TestClusterModel/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Telerik.DataAccess.Core" version="2014.3.1027.1" targetFramework="net40" />
-  <package id="Telerik.DataAccess.Fluent" version="2014.3.1027.1" targetFramework="net40" />
-  <package id="Telerik.DataAccess.Fluent.Sample" version="2014.3.1027.1" targetFramework="net40" />
+  <package id="Telerik.DataAccess.Core" version="2016.2.822.1" targetFramework="net452" />
+  <package id="Telerik.DataAccess.Fluent" version="2016.2.822.1" targetFramework="net452" developmentDependency="true" />
+  <package id="Telerik.DataAccess.Fluent.Sample" version="2016.2.822.1" targetFramework="net452" developmentDependency="true" />
 </packages>
